--- a/topicos/.project
+++ b/topicos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Tópicos Avançados</name>
+	<name>topicos</name>
 	<comment></comment>
 	<projects>
 	</projects>
